--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,15 @@ jobs:
       - name: Checkout to the repository
         uses: actions/checkout@v3
 
-      - name: Deploy to sandbox via rsync
-        uses: trendyminds/github-actions-rsync@master
+      - name: send files to the remote server using scp
+        uses: appleboy/scp-action@master
         with:
-          RSYNC_OPTIONS: -avzr --delete --exclude node_modules --exclude '.git*'
-          RSYNC_TARGET: /ttt
-          RSYNC_SOURCE: /client/
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SSH_HEXCORE_KEY}}
-          SSH_USERNAME: ${{secrets.SSH_USER}}
-          SSH_HOSTNAME: ${{secrets.SSH_HOST}}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_HEXCORE_KEY }}
+          port: 22
+          source: ./
+          target: ~/temp/
       # - name: Install ssh key
       #   uses: shimataro/ssh-key-action@v2
       #   with:
